# regex-engine

./: dune-project  regex_engine.opam
_build/: log
lib/: ast.mli  automata.ml  dfa.ml  dune  lexer.ml  lexer.mll  parser.ml  parser.mli  parser.mly
src/: dune  main.ml
test/: dune  test_regex_engine.ml
